# serverless-sap-ccms

./: .gitignore  Dockerfile  README.md  config.sample.yml  pyproject.toml  sap_creds.sample.json  serverless.yml
lambda_app/handler/: ccms.py
