[tool.poetry]
name = "serverless-sap-ccms"
version = "0.1.0"
description = ""
authors = ["yomon8 <sebanngou8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyrfc = "^2.5.0"
pydantic = "^1.9.1"
boto3 = "^1.24.36"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0", "Cython"]
build-backend = "poetry.core.masonry.api"
